swiper overlapping fixed

--- a/src/Components/Cocurriculam/Testimonials.css
+++ b/src/Components/Cocurriculam/Testimonials.css
@@ -59,6 +59,9 @@
 .testimonials .swiper-pagination-bullet-active{
     background: var(--orange);
 }
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{
+    bottom:-20px;
+}
 
 /*  -------------- Media- Query ------------------- */
 
