--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -37,7 +37,7 @@
 .nav-btn{
     flex: 2;
     width: max-content;
-    z-index: 9;
+    z-index: 9 !important;
 }
 li{
     width: max-content;
